Bug 152900 - crash on pressing tab in receipientline
Summary: crash on pressing tab in receipientline
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-25 22:39 UTC by Edwin Schepers
Modified: 2007-11-27 20:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Edwin Schepers 2007-11-25 22:39:36 UTC
Version:           1.9.50 (using KDE 3.96.1 (KDE 4.0 >= 20071120), compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.22-5-default

Hi,
I have one address in my history.
When I type the first letter of the receipient in To: of the composer (the list appears) and then press Tab, kmail crashes.

Regards,
Edwin

Using host libthread_db library "/lib64/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0x2b3159bb88e0 (LWP 14179)]
[KCrash handler]
#5  0x00002b3155d80a95 in raise () from /lib64/libc.so.6
#6  0x00002b3155d82030 in abort () from /lib64/libc.so.6
#7  0x00002b314a0b5c3e in qt_message_output (msgType=QtFatalMsg, 
    buf=0x7fff60c6e490 "ASSERT: \"myHeader\" in file /install/kde4/kdepim/libkdepim/addresseelineedit.cpp, line 1031") at global/qglobal.cpp:2162
#8  0x00002b314a0b5d4d in qFatal (
    msg=0x2b314a1a93f8 "ASSERT: \"%s\" in file %s, line %d")
    at global/qglobal.cpp:2393
#9  0x00002b314a0b5e8b in qt_assert (assertion=0x2b314ef043c5 "myHeader", 
    file=0x2b314ef04390 "/install/kde4/kdepim/libkdepim/addresseelineedit.cpp", line=1031) at global/qglobal.cpp:1919
#10 0x00002b314eea3760 in KPIM::AddresseeLineEdit::eventFilter (this=0xbc11e0, 
    obj=0xbc11e0, e=0x7fff60c71600)
    at /install/kde4/kdepim/libkdepim/addresseelineedit.cpp:1031
#11 0x00002b3153e67276 in QApplicationPrivate::notify_helper (this=0x63ac50, 
    receiver=0xbc11e0, e=0x7fff60c71600) at kernel/qapplication.cpp:3519
#12 0x00002b3153e67b6f in QApplication::notify (this=0x7fff60c726c0, 
    receiver=0xbc11e0, e=0x7fff60c71600) at kernel/qapplication.cpp:3171
#13 0x00002b314f351ada in KApplication::notify (this=0x7fff60c726c0, 
    receiver=0xbc11e0, event=0x7fff60c71600)
    at /install/kde4/kdelibs/kdeui/kernel/kapplication.cpp:319
#14 0x00002b314a16fb8c in QCoreApplication::notifyInternal (
    this=0x7fff60c726c0, receiver=0xbc11e0, event=0x7fff60c71600)
    at kernel/qcoreapplication.cpp:532
#15 0x00002b314f2b00b3 in QCoreApplication::sendEvent (receiver=0xbc11e0, 
    event=0x7fff60c71600) at /usr/include/QtCore/qcoreapplication.h:186
#16 0x00002b314f3dc079 in KCompletionBox::eventFilter (this=0xbbff10, 
    o=0xbbff10, e=0x7fff60c71600)
    at /install/kde4/kdelibs/kdeui/widgets/kcompletionbox.cpp:119
#17 0x00002b3153e67276 in QApplicationPrivate::notify_helper (this=0x63ac50, 
    receiver=0xbbff10, e=0x7fff60c71600) at kernel/qapplication.cpp:3519
#18 0x00002b3153e67b6f in QApplication::notify (this=0x7fff60c726c0, 
    receiver=0xbbff10, e=0x7fff60c71600) at kernel/qapplication.cpp:3171
#19 0x00002b314f351ada in KApplication::notify (this=0x7fff60c726c0, 
    receiver=0xbbff10, event=0x7fff60c71600)
    at /install/kde4/kdelibs/kdeui/kernel/kapplication.cpp:319
#20 0x00002b314a16fb8c in QCoreApplication::notifyInternal (
    this=0x7fff60c726c0, receiver=0xbbff10, event=0x7fff60c71600)
    at kernel/qcoreapplication.cpp:532
#21 0x00002b3153e7271b in QCoreApplication::sendSpontaneousEvent (
    receiver=0xbbff10, event=0x7fff60c71600)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:205
#22 0x00002b3153ec0c7d in qt_sendSpontaneousEvent (receiver=0xbbff10, 
    event=0x7fff60c71600) at kernel/qapplication_x11.cpp:4399
#23 0x00002b3153ef53a3 in QKeyMapper::sendKeyEvent (keyWidget=0xbbff10, 
    grab=false, type=QEvent::KeyPress, code=16777217, 
    modifiers=@0x7fff60c71b20, text=@0x7fff60c71ab0, autorepeat=false, 
    count=1, nativeScanCode=23, nativeVirtualKey=65289, nativeModifiers=16)
    at kernel/qkeymapper_x11.cpp:1601
#24 0x00002b3153ef6752 in QKeyMapperPrivate::translateKeyEvent (this=0x66cd70, 
    keyWidget=0xbbff10, event=0x7fff60c72170, grab=false)
    at kernel/qkeymapper_x11.cpp:1581
#25 0x00002b3153ecf07e in QApplication::x11ProcessEvent (this=0x7fff60c726c0, 
    event=0x7fff60c72170) at kernel/qapplication_x11.cpp:2937
#26 0x00002b3153ef8e2f in x11EventSourceDispatch (s=0x636fe0, callback=0, 
    user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:137
#27 0x00002b31564d4044 in g_main_context_dispatch ()
   from /usr/lib64/libglib-2.0.so.0
#28 0x00002b31564d733d in ?? () from /usr/lib64/libglib-2.0.so.0
#29 0x00002b31564d780e in g_main_context_iteration ()
   from /usr/lib64/libglib-2.0.so.0
#30 0x00002b314a197b46 in QEventDispatcherGlib::processEvents (this=0x632970, 
    flags=@0x7fff60c72400) at kernel/qeventdispatcher_glib.cpp:340
#31 0x00002b3153ef86cb in QGuiEventDispatcherGlib::processEvents (
    this=0x632970, flags=@0x7fff60c72450)
    at kernel/qguieventdispatcher_glib.cpp:193
#32 0x00002b314a16cd2d in QEventLoop::processEvents (this=0x7fff60c72500, 
    flags=@0x7fff60c724b0) at kernel/qeventloop.cpp:142
#33 0x00002b314a16ce82 in QEventLoop::exec (this=0x7fff60c72500, 
    flags=@0x7fff60c72510) at kernel/qeventloop.cpp:184
#34 0x00002b314a170306 in QCoreApplication::exec ()
    at kernel/qcoreapplication.cpp:761
#35 0x00002b3153e6709c in QApplication::exec () at kernel/qapplication.cpp:3055
#36 0x0000000000402f94 in main (argc=5, argv=0x7fff60c72848)
    at /install/kde4/kdepim/kmail/main.cpp:129
#0  0x00002b3155de5460 in nanosleep () from /lib64/libc.so.6
Comment 1 Thomas McGuire 2007-11-25 23:22:16 UTC
Confirmed, I'll have a look at this.
This only happens for the first entry, pressing tab on other entries has really weird effects.
Comment 2 Thomas McGuire 2007-11-27 20:59:26 UTC
SVN commit 742308 by tmcguire:

Also set the current item when setting an item as selected, or else
currentRow() will not return the new value.

This fixes a crash when pressing tab on the first item.

BUG: 152900



 M  +12 -5     addresseelineedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=742308