Also set the current item when setting an item as selected, or else currentRow() will not return the new value.

This fixes a crash when pressing tab on the first item.

BUG: 152900


svn path=/trunk/KDE/kdepim/libkdepim/; revision=742308